Fixes to languages files

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Mubble-Blöcke",
-    "item.mubbleGroup.mubble_item.mubbles": "Mubble-Gegenstände",
-    "item.mubbleGroup.mubble_costumes": "Mubble-Kostüme",
+    "itemGroup.mubble_blocks": "Mubble-Blöcke",
+    "itemGroup.mubble_items": "Mubble-Gegenstände",
+    "itemGroup.mubble_costumes": "Mubble-Kostüme",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "Vanadium-block",
     "block.mubble.vanadium_ore": "Vanadium-Erz",
     "block.mubble.red_bricks": "Rote Ziegelsteine",
     "block.mubble.red_brick_stairs": "Rote Ziegeltreppe",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Weiße Ziegelsteine",
     "block.mubble.white_brick_stairs": "Weiße Ziegeltreppe",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite-Treppe",
     "block.mubble.blunite_wall": "Blunite-Mauer",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Polierter Blunite",
     "block.mubble.polished_blunite_stairs": "Polierte Blunite-Treppe",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite-Treppe",
     "block.mubble.carbonite_wall": "Carbonite-Mauer",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polierter Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polierte Carbonite-Treppe",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Fußblock",
     "block.mubble.white_cloud_block": "Weißer Wolkenblock",
     "block.mubble.light_gray_cloud_block": "Hellgrauer Wolkenblock",
@@ -49,9 +65,9 @@
     "block.mubble.black_balloon": "Schwarzer Luftballon",
 
     "block.mubble.question_block": "?-block",
-    "block.mubble.empty_block": "Leerer block",
-    "block.mubble.rotating_block": "Rotierender block",
-    "block.mubble.light_block": "Leuchtender block",
+    "block.mubble.empty_block": "Leerer Block",
+    "block.mubble.rotating_block": "Rotierender Block",
+    "block.mubble.light_block": "Leuchtender Block",
     "block.mubble.brick_block": "Ziegelstein-block",
     "block.mubble.golden_brick_block": "Goldener Ziegelstein-block",
     "block.mubble.note_block": "Notenblock",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Medusa's Stein",
     "block.mubble.medusa_bricks": "Medusa's Ziegelsteine",
     "block.mubble.medusa_brick_stairs": "Medusa's Ziegeltreppe",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Blaue Zuckerstangensäule",
     "block.mubble.light_blue_candy_cane_pillar": "Hellblaue Zuckerstangensäule",
     "block.mubble.cyan_candy_cane_pillar": "Türkise Zuckerstangensäule",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "Eisengerüst",
     "block.mubble.purple_bricks": "Violette Ziegelsteine",
     "block.mubble.purple_brick_stairs": "Violette Ziegeltreppe",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Türkise Ziegelsteine",
     "block.mubble.cyan_brick_stairs": "Türkise Ziegeltreppe",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Weltraummaterie",
     "block.mubble.space_obsidian": "Weltraumobsidian",
@@ -168,7 +193,7 @@
     "block.mubble.rewind_block": "Rückspulblock",
     "block.mubble.koretato_block": "Koretato-block",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Verband",
     "item.mubble.wheat_flour": "Weizenmehl",
