--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "sʞɔolᗺ ǝlqqnW",
-    "item.mubbleGroup.mubble_item.mubbles": "sɯǝʇI ǝlqqnW",
-    "item.mubbleGroup.mubble_costumes": "sǝɯnʇsoƆ ǝlqqnW",
+    "itemGroup.mubble_blocks": "sʞɔolᗺ ǝlqqnW",
+    "itemGroup.mubble_items": "sɯǝʇI ǝlqqnW",
+    "itemGroup.mubble_costumes": "sǝɯnʇsoƆ ǝlqqnW",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "ɯnᴉpɐuɐΛ ɟo ʞɔolᗺ",
     "block.mubble.vanadium_ore": "ǝɹO ɯnᴉpɐuɐΛ",
     "block.mubble.red_bricks": "sʞɔᴉɹᗺ pǝᴚ",
     //"block.mubble.red_brick_stairs": "<newline>",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "sʞɔᴉɹᗺ ǝʇᴉɥM",
     //"block.mubble.white_brick_stairs": "<newline>",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "ǝʇᴉunlᗺ",
     //"block.mubble.blunite_stairs": "<newline>",
     //"block.mubble.blunite_wall": "<newline>",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "ǝʇᴉunlᗺ pǝɥsᴉloԀ",
     //"block.mubble.polished_blunite_stairs": "<newline>",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "ǝʇᴉuoqɹɐƆ",
     //"block.mubble.carbonite_stairs": "<newline>",
     //"block.mubble.carbonite_wall": "<newline>",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "ǝʇᴉuoqɹɐƆ pǝɥsᴉloԀ",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "ʞɔolqʇooℲ",
     "block.mubble.white_cloud_block": "ʞɔolq pnolƆ ǝʇᴉɥM",
     //"block.mubble.light_gray_cloud_block": "<newline>",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "ǝuoʇS s,ɐsnpǝW",
     "block.mubble.medusa_bricks": "sʞɔᴉɹq s,ɐsnpǝW",
     //"block.mubble.medusa_brick_stairs": "<newline>",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝnlᗺ",
     //"block.mubble.light_blue_candy_cane_pillar": "<newline>",
     //"block.mubble.cyan_candy_cane_pillar": "<newline>",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "ƃuᴉploɟɟɐɔS uoɹI",
     "block.mubble.purple_bricks": "sʞɔᴉɹᗺ ǝldɹnԀ",
     //"block.mubble.purple_brick_stairs": "<newline>",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "sʞɔᴉɹᗺ uɐʎƆ",
     //"block.mubble.cyan_brick_stairs": "<newline>",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "sǝlqqǝԀ ɹǝplƎ",
     "block.mubble.space_matter": "ɹǝʇʇɐW ǝɔɐdS",
     //"block.mubble.space_obsidian": "<newline>",
@@ -168,7 +193,7 @@
     //"block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "ʞɔolq oʇɐʇǝɹoʞ",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
     "item.mubble.bandage": "ǝƃɐpuɐᗺ",
     "item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
