--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Bloques de Mubble",
-    "item.mubbleGroup.mubble_item.mubbles": "Objetos de Mubble",
-    "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
+    "itemGroup.mubble_blocks": "Bloques de Mubble",
+    "itemGroup.mubble_items": "Objetos de Mubble",
+    "itemGroup.mubble_costumes": "Trajes de Mubble",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "Bloque de vanadio",
     "block.mubble.vanadium_ore": "Mena de vanadio",
     "block.mubble.red_bricks": "Ladrillos rojos",
     "block.mubble.red_brick_stairs": "Escalera de ladrillos rojos",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Ladrillos blancos",
     "block.mubble.white_brick_stairs": "Escalera de ladrillos blancos",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunita",
     "block.mubble.blunite_stairs": "Escalera de blunita",
     "block.mubble.blunite_wall": "Muro de blunita",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Blunita pulida",
     "block.mubble.polished_blunite_stairs": "Escalera de blunita pulida",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonita",
     "block.mubble.carbonite_stairs": "Escalera de carbonita",
     "block.mubble.carbonite_wall": "Muro de carbonita",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Carbonita pulida",
     "block.mubble.polished_carbonite_stairs": "Escalera de carbonita pulida",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Futbloque",
     "block.mubble.white_cloud_block": "Bloque de nube blanca",
     "block.mubble.light_gray_cloud_block": "Bloque de nube gris claro",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Piedra medusa",
     "block.mubble.medusa_bricks": "Ladrillos de medusa",
     "block.mubble.medusa_brick_stairs": "Escalera de ladrillos de medusa",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Pilar de bastón de caramelo azul",
     "block.mubble.light_blue_candy_cane_pillar": "Pilar de bastón de caramelo celeste",
     "block.mubble.cyan_candy_cane_pillar": "Pilar de bastón de caramelo cian",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "Andamio de hierro",
     "block.mubble.purple_bricks": "Ladrillos morados",
     "block.mubble.purple_brick_stairs": "Escalera de ladrillos morados",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Ladrillos cian",
     "block.mubble.cyan_brick_stairs": "Escalera de ladrillos cian",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Guijarros antiguos",
     "block.mubble.space_matter": "Materia espacial",
     //"block.mubble.space_obsidian": "<newline>",
@@ -168,7 +193,7 @@
     //"block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "Bloque Koretato",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadio",
     "item.mubble.bandage": "Vendaje",
     "item.mubble.wheat_flour": "Harina de trigo",
