--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "blauc Mubble",
-    "item.mubbleGroup.mubble_item.mubbles": "trucs Mubble",
-    "item.mubbleGroup.mubble_costumes": "costum Mubble",
+    "itemGroup.mubble_blocks": "blauc Mubble",
+    "itemGroup.mubble_items": "trucs Mubble",
+    "itemGroup.mubble_costumes": "costum Mubble",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "cube joli et mjenta",
     "block.mubble.vanadium_ore": "minrai cool et mjenta",
     "block.mubble.red_bricks": "brik rouj",
     "block.mubble.red_brick_stairs": "escalator de briqe rouj",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "brik blanch",
     "block.mubble.white_brick_stairs": "escalator de briqe blan",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "blunit",
     "block.mubble.blunite_stairs": "escalator en blunit",
     "block.mubble.blunite_wall": "mur d blunit",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "blunit tou bo tou propr",
     "block.mubble.polished_blunite_stairs": "mur de blunit propre",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "crbolit",
     "block.mubble.carbonite_stairs": "scalier en carbolit",
     "block.mubble.carbonite_wall": "mur en carbolit",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "cobnite bo",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "blok foutbol",
     //"block.mubble.white_cloud_block": "<newline>",
     //"block.mubble.light_gray_cloud_block": "<newline>",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "cayoue de la madane serpen",
     "block.mubble.medusa_bricks": "brik chai madame serpens!",
     //"block.mubble.medusa_brick_stairs": "<newline>",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "piler de bonbon de noel sauf que c ble",
     //"block.mubble.light_blue_candy_cane_pillar": "<newline>",
     //"block.mubble.cyan_candy_cane_pillar": "<newline>",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "chafaudaj an faire",
     "block.mubble.purple_bricks": "brik volete",
     //"block.mubble.purple_brick_stairs": "<newline>",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "brik sian",
     //"block.mubble.cyan_brick_stairs": "<newline>",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "vieu galai come su la plaj de diepp",
     "block.mubble.space_matter": "matiare martiéne",
     //"block.mubble.space_obsidian": "<newline>",
@@ -168,7 +193,7 @@
     //"block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "patete qui vi",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "mincraf minerai cool pourpré",
     "item.mubble.bandage": "pensmen",
     "item.mubble.wheat_flour": "farin",
