--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Blocs Mubble",
-    "item.mubbleGroup.mubble_item.mubbles": "Objets Mubble",
-    "item.mubbleGroup.mubble_costumes": "Costumes Mubble",
+    "itemGroup.mubble_blocks": "Blocs Mubble",
+    "itemGroup.mubble_items": "Objets Mubble",
+    "itemGroup.mubble_costumes": "Costumes Mubble",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "Bloc de vanadium",
     "block.mubble.vanadium_ore": "Minerai de vanadium",
     "block.mubble.red_bricks": "Briques rouges",
     "block.mubble.red_brick_stairs": "Escaliers en brique rouge",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Briques blanches",
     "block.mubble.white_brick_stairs": "Escaliers en brique blanche",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escaliers en blunite",
     "block.mubble.blunite_wall": "Muret en blunite",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Blunite poli",
     "block.mubble.polished_blunite_stairs": "Escaliers en blunite poli",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Escaliers en carbonite",
     "block.mubble.carbonite_wall": "Muret en carbonite",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Carbonite polie",
     "block.mubble.polished_carbonite_stairs": "Escaliers en carbonite poli",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Bloc de foot",
     "block.mubble.white_cloud_block": "Bloc de nuage blanc",
     "block.mubble.light_gray_cloud_block": "Bloc de nuage gris clair",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Roche de Méduse",
     "block.mubble.medusa_bricks": "Briques de Méduse",
     "block.mubble.medusa_brick_stairs": "Escaliers en brique de Méduse",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Pilier de sucre d'orge bleu",
     "block.mubble.light_blue_candy_cane_pillar": "Pilier de sucre d'orge bleu clair",
     "block.mubble.cyan_candy_cane_pillar": "Pilier de sucre d'orge cyan",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "Échafaudage en fer",
     "block.mubble.purple_bricks": "Briques violettes",
     "block.mubble.purple_brick_stairs": "Escaliers en brique violette",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Briques cyans",
     "block.mubble.cyan_brick_stairs": "Escaliers en brique cyan",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Anciens galets",
     "block.mubble.space_matter": "Matière spatiale",
     "block.mubble.space_obsidian": "Obsidienne spatiale",
@@ -168,7 +193,7 @@
     "block.mubble.rewind_block": "Bloc Rewind",
     "block.mubble.koretato_block": "Bloc Koretato",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Bandage",
     "item.mubble.wheat_flour": "Farine de blé",
