--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Mubble cubes thingyz",
-    "item.mubbleGroup.mubble_item.mubbles": "Mubble toyz",
-    "item.mubbleGroup.mubble_costumes": "Mubble put things on you for no reazon lol",
+    "itemGroup.mubble_blocks": "Mubble cubes thingyz",
+    "itemGroup.mubble_items": "Mubble toyz",
+    "itemGroup.mubble_costumes": "Mubble put things on you for no reazon lol",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "shiny purple cube",
     "block.mubble.vanadium_ore": "shiny purple in blox",
     "block.mubble.red_bricks": "bloo brik",
     "block.mubble.red_brick_stairs": "bloo birk sters",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "cool brik",
     "block.mubble.white_brick_stairs": "cool brik sters",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "moon-a-bloc",
     "block.mubble.blunite_stairs": "moon-a-ster",
     "block.mubble.blunite_wall": "moon-a-woll",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "pretteh monnbloc",
     "block.mubble.polished_blunite_stairs": "pretteh monnbloc sters",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "blac stoneh",
     "block.mubble.carbonite_stairs": "blac stoneh sters",
     "block.mubble.carbonite_wall": "blac stoneh woll",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "pretteh blac ston",
     "block.mubble.polished_carbonite_stairs": "pretteh blac sters",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "SOCCEEEbloc",
     "block.mubble.white_cloud_block": "clou itz white",
     "block.mubble.light_gray_cloud_block": "clou itz less white",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "the stone in the room with the sp0ky girl with snakes on her head",
     "block.mubble.medusa_bricks": "the bricks in the room with the sp00ky girl with snakes on her head",
     "block.mubble.medusa_brick_stairs": "the sterz in the room with the sp0ky girl with snakes on her head",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "blue big christmas cane",
     //"block.mubble.light_blue_candy_cane_pillar": "<newline>",
     //"block.mubble.cyan_candy_cane_pillar": "<newline>",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "irun zcffolding",
     "block.mubble.purple_bricks": "parpal brik",
     "block.mubble.purple_brick_stairs": "parpal sterz",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "nyan briks",
     "block.mubble.cyan_brick_stairs": "nyan sterz",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "old pebbL",
     "block.mubble.space_matter": "MARTIAN DIRT OoOoOoO",
     "block.mubble.space_obsidian": "STRONGER MARTIAN DIRT OoOoOoOiEr",
@@ -168,7 +193,7 @@
     "block.mubble.rewind_block": "aww dat'z hawt",
     "block.mubble.koretato_block": "Koretato blok",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "shiny purple",
     "item.mubble.bandage": "banaj",
     "item.mubble.wheat_flour": "wet floor",
