--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Mubble blokken",
-    "item.mubbleGroup.mubble_item.mubbles": "Mubble voorwerpen",
-    "item.mubbleGroup.mubble_costumes": "Mubble kostuums",
+    "itemGroup.mubble_blocks": "Mubble blokken",
+    "itemGroup.mubble_items": "Mubble voorwerpen",
+    "itemGroup.mubble_costumes": "Mubble kostuums",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "Vanadiumblok",
     "block.mubble.vanadium_ore": "Vanadiumerts",
     "block.mubble.red_bricks": "Rode bakstenen",
     "block.mubble.red_brick_stairs": "Rode bakstenen trap",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Witte bakstenen",
     "block.mubble.white_brick_stairs": "Witte bakstenen trap",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite trap",
     "block.mubble.blunite_wall": "Blunite muur",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Gepolijst blunite",
     "block.mubble.polished_blunite_stairs": "Gepolijst blunite trap",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite trap",
     "block.mubble.carbonite_wall": "Carbonite muur",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Gepolijst carbonite",
     "block.mubble.polished_carbonite_stairs": "Gepolijst carbonite trap",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Voetblok",
     "block.mubble.white_cloud_block": "Wittewolkblok",
     "block.mubble.light_gray_cloud_block": "Lichtgrijzewolkblok",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Medusasteen",
     "block.mubble.medusa_bricks": "Medusablokstenen",
     "block.mubble.medusa_brick_stairs": "Medusablokstenen trap",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Blauwe zuurstokpillaar",
     "block.mubble.light_blue_candy_cane_pillar": "Lichtblauwe zuurstokpillaar",
     "block.mubble.cyan_candy_cane_pillar": "Turquoise zuurstokpillaar",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "IJzersteiger",
     "block.mubble.purple_bricks": "Paarse bakstenen",
     "block.mubble.purple_brick_stairs": "Paarse bakstenen trap",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Turquoise bakstenen",
     "block.mubble.cyan_brick_stairs": "Turqoise bakstenen trap",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Oudere keizels",
     "block.mubble.space_matter": "Ruimte materie",
     "block.mubble.space_obsidian": "Ruimte obsidiaan",
@@ -168,7 +193,7 @@
     "block.mubble.rewind_block": "Terugspoelblok",
     "block.mubble.koretato_block": "Koretato-blok",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Verband",
     "item.mubble.wheat_flour": "Tarwemeel",
