--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Blocos de Mubble",
-    "item.mubbleGroup.mubble_item.mubbles": "Itens de Mubble",
-    "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
+    "itemGroup.mubble_blocks": "Blocos de Mubble",
+    "itemGroup.mubble_items": "Itens de Mubble",
+    "itemGroup.mubble_costumes": "Trajes de Mubble",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "Bloco de Vanadium",
     "block.mubble.vanadium_ore": "Minério de Vanadium",
     "block.mubble.red_bricks": "Tijolos Vermelhos",
     "block.mubble.red_brick_stairs": "Escadas de Tijolos Vermelhos",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Tijolos Brancos",
     "block.mubble.white_brick_stairs": "Escadas de Tijolos Brancos",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escadas de Blunite",
     "block.mubble.blunite_wall": "Parede de Blunite",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Blunite Polido",
     "block.mubble.polished_blunite_stairs": "Escadas de Blunite Polido",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Escadas de Carbonite",
     "block.mubble.carbonite_wall": "Parede de Carbonite",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Carbonite Polido",
     "block.mubble.polished_carbonite_stairs": "Escadas de Carbonite Polido",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Futebloco",
     "block.mubble.white_cloud_block": "Bloco de Nuvem Branca",
     "block.mubble.light_gray_cloud_block": "Bloco de Nuvem Cinza-Claro",
@@ -103,7 +119,7 @@
     "block.mubble.purple_tetris_block": "Bloco Roxo de Tetris",
     "block.mubble.brown_tetris_block": "Bloco Marrom de Tetris",
     "block.mubble.white_tetris_block": "Bloco Branco de Tetris",
-    "block.mubble.light_gray_tetris_block": "Light Gray Tetris block",
+    "block.mubble.light_gray_tetris_block": "Light Gray Tetris Block",
     "block.mubble.gray_tetris_block": "Bloco Cinza de Tetris",
     "block.mubble.black_tetris_block": "Bloco Preto de Tetris",
     "block.mubble.tetris_glass": "Vidro de Tetris",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Pedra da Medusa",
     "block.mubble.medusa_bricks": "Tijolos de Medusa",
     "block.mubble.medusa_brick_stairs": "Escadas de Tijolos de Medusa",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Pilar de Bengala Doce Azul",
     "block.mubble.light_blue_candy_cane_pillar": "Pilar de Bengala Doce Azul Claro",
     "block.mubble.cyan_candy_cane_pillar": "Pilar de Bengala Doce Ciano",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "Andaime de Ferro",
     "block.mubble.purple_bricks": "Tijolos Roxos",
     "block.mubble.purple_brick_stairs": "Escadas de Tijolos Roxos",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Tijolos Cianos",
     "block.mubble.cyan_brick_stairs": "Escadas de Tijolos Cianos",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Seixos Antigos",
     "block.mubble.space_matter": "Matéria Espacial",
     "block.mubble.space_obsidian": "Obsidiana Espacial",
@@ -168,7 +193,7 @@
     "block.mubble.rewind_block": "Bloco de Rewind",
     "block.mubble.koretato_block": "Bloco Koretato",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Bandagem",
     "item.mubble.wheat_flour": "Farinha de Trigo",
