--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -1,26 +1,42 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "任天堂领域方块",
-    "item.mubbleGroup.mubble_item.mubbles": "任天堂领域物品",
-    "item.mubbleGroup.mubble_costumes": "任天堂领域时装",
+    "itemGroup.mubble_blocks": "任天堂领域方块",
+    "itemGroup.mubble_items": "任天堂领域物品",
+    "itemGroup.mubble_costumes": "任天堂领域时装",
 
-    //block.mubbleS
+    //BLOCKS
     "block.mubble.vanadium_block": "钒块",
     "block.mubble.vanadium_ore": "钒矿石",
     "block.mubble.red_bricks": "红色砖块",
     //"block.mubble.red_brick_stairs": "<newline>",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "白色砖块",
     //"block.mubble.white_brick_stairs": "<newline>",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "蓝岩",
     //"block.mubble.blunite_stairs": "<newline>",
     //"block.mubble.blunite_wall": "<newline>",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "磨制蓝岩",
     //"block.mubble.polished_blunite_stairs": "<newline>",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "碳岩",
     //"block.mubble.carbonite_stairs": "<newline>",
     //"block.mubble.carbonite_wall": "<newline>",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "磨制碳岩",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "足球块",
     //"block.mubble.white_cloud_block": "<newline>",
     //"block.mubble.light_gray_cloud_block": "<newline>",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "美杜莎之石",
     "block.mubble.medusa_bricks": "美杜莎砖块",
     //"block.mubble.medusa_brick_stairs": "<newline>",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "蓝色拐杖糖支柱",
     //"block.mubble.light_blue_candy_cane_pillar": "<newline>",
     //"block.mubble.cyan_candy_cane_pillar": "<newline>",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "铁脚手架",
     "block.mubble.purple_bricks": "紫色砖块",
     //"block.mubble.purple_brick_stairs": "<newline>",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "青色砖块",
     //"block.mubble.cyan_brick_stairs": "<newline>",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "远古鹅卵石",
     "block.mubble.space_matter": "太空物质",
     //"block.mubble.space_obsidian": "<newline>",
@@ -168,7 +193,7 @@
     //"block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "Koretato块",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "钒",
     "item.mubble.bandage": "绷带",
     "item.mubble.wheat_flour": "小麦面粉",
