--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1,31 +1,47 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_blocks": "Mubble blocks",
-    "item.mubbleGroup.mubble_item.mubbles": "Mubble item.mubbles",
-    "item.mubbleGroup.mubble_costumes": "Mubble Costumes",
+    "itemGroup.mubble_blocks": "Mubble Blocks",
+    "itemGroup.mubble_items": "Mubble Items",
+    "itemGroup.mubble_costumes": "Mubble Costumes",
 
-    //block.mubbleS
-    "block.mubble.vanadium_block": "block.mubble of Vanadium",
+    //BLOCKS
+    "block.mubble.vanadium_block": "Block of Vanadium",
     "block.mubble.vanadium_ore": "Vanadium Ore",
     "block.mubble.red_bricks": "Red Bricks",
     "block.mubble.red_brick_stairs": "Red Brick Stairs",
+    //"block.mubble.red_brick_slab": "Red Brick Slab",
+    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    //"block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "White Bricks",
     "block.mubble.white_brick_stairs": "White Brick Stairs",
+    //"block.mubble.white_brick_slab": "White Brick Slab",
+    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    //"block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite Stairs",
     "block.mubble.blunite_wall": "Blunite Wall",
+    //"block.mubble.blunite_slab": "Blunite Slab",
+    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    //"block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Polished Blunite",
     "block.mubble.polished_blunite_stairs": "Polished Blunite Stairs",
+    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite Stairs",
     "block.mubble.carbonite_wall": "Carbonite Wall",
+    //"block.mubble.carbonite_slab": "Carbonite Slab",
+    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    //"block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polished Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polished Carbonite Stairs",
+    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Footblock",
-    "block.mubble.white_cloud_block": "White Cloud block",
-    "block.mubble.light_gray_cloud_block": "Light Grey Cloud block",
-    "block.mubble.gray_cloud_block": "Grey Cloud block",
-    "block.mubble.black_cloud_block": "Black Cloud block",
+    "block.mubble.white_cloud_block": "White Cloud Block",
+    "block.mubble.light_gray_cloud_block": "Light Grey Cloud Block",
+    "block.mubble.gray_cloud_block": "Grey Cloud Block",
+    "block.mubble.black_cloud_block": "Black Cloud Block",
     //"block.mubble.tomato": "<newline>",
     //"block.mubble.salad": "<newline>",
     //"block.mubble.cheese_block": "<newline>",
@@ -48,14 +64,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block": "? block",
-    "block.mubble.empty_block": "Empty block",
-    "block.mubble.rotating_block": "Rotating block",
-    "block.mubble.light_block": "Light block",
-    "block.mubble.brick_block": "Brick block",
-    "block.mubble.golden_brick_block": "Golden Brick block",
-    "block.mubble.note_block": "Note block",
-    "block.mubble.super_note_block": "Super Note block",
+    "block.mubble.question_block": "? Block",
+    "block.mubble.empty_block": "Empty Block",
+    "block.mubble.rotating_block": "Rotating Block",
+    "block.mubble.light_block": "Light Block",
+    "block.mubble.brick_block": "Brick Block",
+    "block.mubble.golden_brick_block": "Golden Brick Block",
+    "block.mubble.note_block": "Note Block",
+    "block.mubble.super_note_block": "Super Note Block",
     "block.mubble.fire_flower": "Fire Flower",
     "block.mubble.ice_flower": "Ice Flower",
     "block.mubble.boomerang_flower": "Boomerang Flower",
@@ -75,20 +91,20 @@
     "block.mubble.light_gray_mushroom": "Light Grey Mushroom",
     "block.mubble.gray_mushroom": "Grey Mushroom",
     "block.mubble.black_mushroom": "Black Mushroom",
-    "block.mubble.blue_mushroom_block": "Blue Mushroom block",
-    "block.mubble.light_blue_mushroom_block": "Light Blue Mushroom block",
-    "block.mubble.cyan_mushroom_block": "Cyan Mushroom block",
-    "block.mubble.green_mushroom_block": "Green Mushroom block",
-    "block.mubble.lime_mushroom_block": "Lime Mushroom block",
-    "block.mubble.yellow_mushroom_block": "Yellow Mushroom block",
-    "block.mubble.orange_mushroom_block": "Orange Mushroom block",
-    "block.mubble.pink_mushroom_block": "Pink Mushroom block",
-    "block.mubble.magenta_mushroom_block": "Magenta Mushroom block",
-    "block.mubble.purple_mushroom_block": "Purple Mushroom block",
-    "block.mubble.white_mushroom_block": "White Mushroom block",
-    "block.mubble.light_gray_mushroom_block": "Light Grey Mushroom block",
-    "block.mubble.gray_mushroom_block": "Grey Mushroom block",
-    "block.mubble.black_mushroom_block": "Black Mushroom block",
+    "block.mubble.blue_mushroom_block": "Blue Mushroom Block",
+    "block.mubble.light_blue_mushroom_block": "Light Blue Mushroom Block",
+    "block.mubble.cyan_mushroom_block": "Cyan Mushroom Block",
+    "block.mubble.green_mushroom_block": "Green Mushroom Block",
+    "block.mubble.lime_mushroom_block": "Lime Mushroom Block",
+    "block.mubble.yellow_mushroom_block": "Yellow Mushroom Block",
+    "block.mubble.orange_mushroom_block": "Orange Mushroom Block",
+    "block.mubble.pink_mushroom_block": "Pink Mushroom Block",
+    "block.mubble.magenta_mushroom_block": "Magenta Mushroom Block",
+    "block.mubble.purple_mushroom_block": "Purple Mushroom Block",
+    "block.mubble.white_mushroom_block": "White Mushroom Block",
+    "block.mubble.light_gray_mushroom_block": "Light Grey Mushroom Block",
+    "block.mubble.gray_mushroom_block": "Grey Mushroom Block",
+    "block.mubble.black_mushroom_block": "Black Mushroom Block",
 
     //"block.mubble.blue_tetris_block": "<newline>",
     //"block.mubble.light_blue_tetris_block": "<newline>",
@@ -115,6 +131,9 @@
     "block.mubble.medusa_stone": "Medusa's Stone",
     "block.mubble.medusa_bricks": "Medusa's Bricks",
     "block.mubble.medusa_brick_stairs": "Medusa's Brick Stairs",
+    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Blue Candy Cane Pillar",
     "block.mubble.light_blue_candy_cane_pillar": "Light Blue Candy Cane Pillar",
     "block.mubble.cyan_candy_cane_pillar": "Cyan Candy Cane Pillar",
@@ -147,8 +166,14 @@
     "block.mubble.iron_scaffolding": "Iron Scaffolding",
     "block.mubble.purple_bricks": "Purple Bricks",
     "block.mubble.purple_brick_stairs": "Purple Brick Stairs",
+    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
+    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Cyan Bricks",
     "block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
+    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Space Matter",
     //"block.mubble.space_obsidian": "<newline>",
@@ -166,9 +191,9 @@
     //"block.mubble.puyo_block": "<newline>",
 
     //"block.mubble.rewind_block": "<newline>",
-    "block.mubble.koretato_block": "Koretato block",
+    "block.mubble.koretato_block": "Koretato Block",
 
-    //item.mubbleS
+    //ITEMS
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Bandage",
     "item.mubble.wheat_flour": "Wheat Flour",
@@ -275,7 +300,7 @@
     "advancements.mubble.get_vanadium.title": "Vanadiums!",
     "advancements.mubble.get_vanadium.description": "Acquire vanadiums",
     "advancements.mubble.get_tetris_block.mubble.title": "It's All Connected",
-    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris block",
+    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris Block",
 
     //COMMANDS
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
